16 hours to cleanup this mess of a folder

--- a/index.toml
+++ b/index.toml
@@ -838,6 +838,342 @@ file = "mods/testing/new/templates-2.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing/newer/3dskinlayers.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/advancement-screenshot.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/adventurez.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/alloy-forgery.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/amplified-nether.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/aquamirae.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/autotag.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/azurelib.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/beans-backpacks.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/better-loot.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/better-mineshaft.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/bouncier-beds.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/common-network.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/corgilib.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/decorative-blocks.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/dehydration.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/diet.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/ears.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/ecologics.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/enchantery.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/enhanced-celestials.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/environmentz.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/explorations.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/explorers-compass.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/fair-wage.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/flat-bedrock.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/framework-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/frostiful.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/fullblock-energistics.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/go-fish.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/guardians-galore-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/hellions-sniffer+.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/hopo-better-ruined-portals.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/hybrid-aquatic.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/immersivemc.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/industrial-rezolution.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/inmis.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/inmisaddon.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/ketkets-furnicraft.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/metal-bundles.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/midnightlib.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/mighty-mail-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/minecells.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/modern-industrialization-sound-addon.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/modern-industrialization.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/mythic-mobs.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/mythic-mounts.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/mythic-upgrades.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/mythicmetals-decorations.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/mythicmetals.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/nears.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/numismatic-overhaul.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/nyfs-spiders.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/obscure-api.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/packed-up-backpacks.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/peculiarpieces.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/pet-shop.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/ping-wheel.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/potionparticlepack.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/progression-reborn.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/realistic-bees.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/repurposed-structures-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/sandwichable.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/scaffolding-drops-nearby.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/shimmer!.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/simply-swords.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/smartbrainlib.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/softer-pastels.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/soulice.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/thermoo.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/thin-air.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/trique-api.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/umu-backpack.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/vanilla-zoom.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/visual-workbench.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/warden-tools.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/wavey-capes.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/wildlife-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/wiredredstone.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/wyd.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/ydms-red-panda.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/yungs-better-dungeons.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/yungs-bridges.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer/yungs-extras.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/testing/thigh-highs-etc.pw.toml"
 metafile = true
 
