--- a/index.toml
+++ b/index.toml
@@ -1042,6 +1042,10 @@ file = "mods/testing/newer6/alloy-forgery.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing/newer6/autotag.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/testing/newer6/environmentz.pw.toml"
 metafile = true
 
