--- a/index.toml
+++ b/index.toml
@@ -1062,6 +1062,30 @@ file = "mods/testing/newer6/soulice.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing/newer7/adventurez.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer7/beans-backpacks.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer7/enchantery.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer7/peculiarpieces.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer7/progression-reborn.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer7/softer-pastels.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/testing/thigh-highs-etc.pw.toml"
 metafile = true
 
