--- a/index.toml
+++ b/index.toml
@@ -1074,6 +1074,26 @@ file = "mods/testing/newer/yungs-extras.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing/newer2/modern-industrialization-sound-addon.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer2/modern-industrialization.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer2/nyfs-spiders.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer2/progression-reborn.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer2/simply-swords.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/testing/thigh-highs-etc.pw.toml"
 metafile = true
 
