--- a/index.toml
+++ b/index.toml
@@ -1074,7 +1074,15 @@ file = "mods/testing/newer/yungs-extras.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer2/modern-industrialization.pw.toml"
+file = "mods/testing/newer2/nyfs-spiders.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer2/progression-reborn.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer2/simply-swords.pw.toml"
 metafile = true
 
 [[files]]
