--- a/index.toml
+++ b/index.toml
@@ -1074,15 +1074,19 @@ file = "mods/testing/newer/yungs-extras.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer2/nyfs-spiders.pw.toml"
+file = "mods/testing/newer2/alloy-forgery.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer2/progression-reborn.pw.toml"
+file = "mods/testing/newer2/autotag.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer2/simply-swords.pw.toml"
+file = "mods/testing/newer2/mythicmetals-decorations.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/newer2/mythicmetals.pw.toml"
 metafile = true
 
 [[files]]
