--- a/index.toml
+++ b/index.toml
@@ -70,31 +70,35 @@ file = "mods/content/better-archeology.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/blocks/chipped.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/blocks/connected-glass.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/blocks/hearth-and-home.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/blocks/rechiseled-create.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/blocks/rechiseled.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/blocks/softer-pastels.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/blocks/stoneworks.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/bountiful.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/content/building/chipped.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/content/building/connected-glass.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/content/building/hearth-and-home.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/content/building/rechiseled-create.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/content/building/rechiseled.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/content/building/stoneworks.pw.toml"
 metafile = true
 
 [[files]]
@@ -207,6 +211,10 @@ metafile = true
 
 [[files]]
 file = "mods/content/decoration/connectible_chains.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/decoration/decorative-blocks.pw.toml"
 metafile = true
 
 [[files]]
@@ -358,7 +366,15 @@ file = "mods/content/furniture/handcrafted.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/go-fish.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/goated.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/guardians-galore-fabric.pw.toml"
 metafile = true
 
 [[files]]
@@ -427,10 +443,6 @@ metafile = true
 
 [[files]]
 file = "mods/content/macaws/macaws-windows.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/content/magnum-torch.pw.toml"
 metafile = true
 
 [[files]]
@@ -890,14 +902,6 @@ file = "mods/testing/newer/better-mineshaft.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer/bouncier-beds.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/decorative-blocks.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/testing/newer/dehydration.pw.toml"
 metafile = true
 
@@ -930,7 +934,7 @@ file = "mods/testing/newer/explorers-compass.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer/fair-wage.pw.toml"
+file = "mods/testing/newer/fabric-simple-animated-guns.pw.toml"
 metafile = true
 
 [[files]]
@@ -943,18 +947,6 @@ metafile = true
 
 [[files]]
 file = "mods/testing/newer/frostiful.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/fullblock-energistics.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/go-fish.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/guardians-galore-fabric.pw.toml"
 metafile = true
 
 [[files]]
@@ -1026,18 +1018,6 @@ file = "mods/testing/newer/mythicmetals.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer/nears.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/numismatic-overhaul.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/nyfs-spiders.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/testing/newer/obscure-api.pw.toml"
 metafile = true
 
@@ -1074,23 +1054,7 @@ file = "mods/testing/newer/repurposed-structures-fabric.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer/sandwichable.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/scaffolding-drops-nearby.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/testing/newer/simply-swords.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/softer-pastels.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/soulice.pw.toml"
 metafile = true
 
 [[files]]
@@ -1274,6 +1238,10 @@ file = "mods/tweaks/gameplay/netherportalfix.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/gameplay/nyfs-spiders.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/gameplay/player-ladder.pw.toml"
 metafile = true
 
@@ -1287,6 +1255,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/gameplay/rightclickharvest.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/gameplay/scaffolding-drops-nearby.pw.toml"
 metafile = true
 
 [[files]]
