--- a/mods/testing/newer/hopo-better-ruined-portals.pw.toml
+++ b/mods/testing/newer/hopo-better-ruined-portals.pw.toml
@@ -1,6 +1,6 @@
 name = "Hopo Better Ruined Portals"
 filename = "HopoBetterRuinedPortals-[1.20-1.20.2]-1.3.7.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/hIpLSyga/versions/PlfAUAli/HopoBetterRuinedPortals-%5B1.20-1.20.2%5D-1.3.7.jar"
