--- a/index.toml
+++ b/index.toml
@@ -66,6 +66,10 @@ file = "mods/content/applied-energistics/applied-energistics-2-wireless-terminal
 metafile = true
 
 [[files]]
+file = "mods/content/aquamirae.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/better-archeology.pw.toml"
 metafile = true
 
@@ -806,6 +810,10 @@ file = "mods/testing/create/estrogen.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing/dunno/adventurez.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/testing/dunno/enchantery.pw.toml"
 metafile = true
 
@@ -822,6 +830,14 @@ file = "mods/testing/keepcommandhistory.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing/libraries/athena-ctm.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/libraries/azurelib.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/testing/libraries/bookshelf-lib.pw.toml"
 metafile = true
 
@@ -831,6 +847,14 @@ metafile = true
 
 [[files]]
 file = "mods/testing/libraries/dawn.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/libraries/framework-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/libraries/obscure-api.pw.toml"
 metafile = true
 
 [[files]]
@@ -914,27 +938,7 @@ file = "mods/testing/newer/advancement-screenshot.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer/adventurez.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/aquamirae.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/athena-ctm.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/testing/newer/autotag.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/azurelib.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/better-mineshaft.pw.toml"
 metafile = true
 
 [[files]]
@@ -950,19 +954,11 @@ file = "mods/testing/newer/environmentz.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer/explorations.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/testing/newer/explorers-compass.pw.toml"
 metafile = true
 
 [[files]]
 file = "mods/testing/newer/fabric-simple-animated-guns.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/framework-fabric.pw.toml"
 metafile = true
 
 [[files]]
@@ -978,10 +974,6 @@ file = "mods/testing/newer/hopo-better-ruined-portals.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer/obscure-api.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/testing/newer/ping-wheel.pw.toml"
 metafile = true
 
@@ -991,10 +983,6 @@ metafile = true
 
 [[files]]
 file = "mods/testing/newer/radiant-gear.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/repurposed-structures-fabric.pw.toml"
 metafile = true
 
 [[files]]
@@ -1014,18 +1002,6 @@ file = "mods/testing/newer/wavey-capes.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/newer/yungs-better-dungeons.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/yungs-bridges.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/testing/newer/yungs-extras.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/testing/thigh-highs-etc.pw.toml"
 metafile = true
 
@@ -1034,7 +1010,31 @@ file = "mods/testing/wolves-of-other-furs.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/yungs-better-mineshafts.pw.toml"
+file = "mods/testing/worldgen/better-mineshaft.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/worldgen/explorations.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/worldgen/repurposed-structures-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/worldgen/yungs-better-dungeons.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/worldgen/yungs-better-mineshafts.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/worldgen/yungs-bridges.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/worldgen/yungs-extras.pw.toml"
 metafile = true
 
 [[files]]
